# desktop-sharkie

./: Cargo.toml  LICENSE.md  README.md
src/: build.rs  fragment.100.glsl  fragment.110.glsl  fragment.140.glsl  main.rs  measurements.rs  misc.rs  resource.rc  vertex.100.glsl  vertex.110.glsl  vertex.140.glsl
src/assets/: mod.rs
src/platform/: mod.rs
src/platform/windows/: mod.rs  tray.rs
